--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
       border: 0;
       border-top: 1px solid #ccc;
     }
+    .whatsapp-button {
+      margin-top: 10px;
+      background-color: #25D366;
+      color: white;
+      border: none;
+      padding: 8px;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    .whatsapp-button:hover {
+      background-color: #128C7E;
+    }
   </style>
 </head>
 <body>
@@ -240,6 +253,28 @@
 
     let totalPoints = 0;
     let totalX = 0;
+    let currentRound = 1;
+
+    // Lade gespeicherte Daten aus dem localStorage
+    window.onload = function() {
+      const storedData = JSON.parse(localStorage.getItem('tournamentData')) || {};
+      
+      // Setze gespeicherte Werte
+      document.getElementById('tournament').value = storedData.tournament || '';
+      document.getElementById('name').value = storedData.name || '';
+      document.getElementById('distance').value = storedData.distance || '';
+      document.getElementById('target').value = storedData.target || '';
+      document.getElementById('round').value = storedData.round || 1;
+      totalPoints = storedData.totalPoints || 0;
+      totalX = storedData.totalX || 0;
+
+      // Setze Teilnehmerergebnisse
+      participantsResults.innerHTML = storedData.participantsResults || '';
+      totalXDiv.innerHTML = `<strong>Gesamt X:</strong> ${totalX}`;
+
+      // Wenn es gespeicherte Daten gibt, wird die Rundenzahl fortgesetzt
+      currentRound = storedData.round || 1;
+    };
 
     // Zeigt zusätzliche Pfeile, wenn 6 Pfeile gewählt sind
     arrowSelect.addEventListener('change', () => {
@@ -279,9 +314,12 @@
       const participantResult = document.createElement('div');
       participantResult.classList.add('participant-result');
       participantResult.innerHTML = `
-        <p><strong>${participantName}</strong></p>
+        <p><strong>${participantName}</strong> (Runde ${currentRound})</p>
         <p>Rundenpunkte: ${roundPointsField.value}</p>
         <p>Gesamtpunkte: ${totalPoints}</p>
+        <button class="whatsapp-button" onclick="shareResult('${participantName}', ${currentRound}, ${roundPointsField.value}, ${totalPoints})">
+          Ergebnis auf WhatsApp teilen
+        </button>
       `;
       participantsResults.appendChild(participantResult);
 
@@ -289,24 +327,37 @@
       const arrowPoints = document.querySelectorAll('.arrow-point');
       arrowPoints.forEach(arrow => arrow.value = '0');
 
-      // Ändere die Runde
-      const currentRound = parseInt(document.getElementById('round').value);
-      document.getElementById('round').value = currentRound + 1;
+      // Erhöhe die Rundenzahl
+      currentRound++;
+      document.getElementById('round').value = currentRound;
+
+      // Speichere die Daten im localStorage
+      const dataToSave = {
+        tournament: document.getElementById('tournament').value,
+        name: document.getElementById('name').value,
+        distance: document.getElementById('distance').value,
+        target: document.getElementById('target').value,
+        round: currentRound,
+        totalPoints: totalPoints,
+        totalX: totalX,
+        participantsResults: participantsResults.innerHTML
+      };
+
+      localStorage.setItem('tournamentData', JSON.stringify(dataToSave));
     });
 
     // Formular zurücksetzen
     clearButton.addEventListener('click', () => {
-      formFields.forEach(field => {
-        const element = document.getElementById(field);
-        element.value = '';
-      });
-      roundPointsField.value = 0;
-      totalPointsField.value = 0;
-      participantsResults.innerHTML = '';
-      totalXDiv.innerHTML = '';
-      totalPoints = 0;
-      totalX = 0;
+      localStorage.removeItem('tournamentData');
+      window.location.reload();
     });
+
+    // WhatsApp teilen Funktion
+    function shareResult(name, round, roundPoints, totalPoints) {
+      const message = `Ergebnis von ${name} (Runde ${round}):\nRundenpunkte: ${roundPoints}\nGesamtpunkte: ${totalPoints}`;
+      const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
+      window.open(whatsappUrl, '_blank');
+    }
   </script>
 </body>
 </html>
