--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     const extraArrowsDiv = document.getElementById('extra-arrows');
     let totalPoints = 0;
     let totalX = 0;
-    let currentRound = 1;
+    let currentRound = parseInt(localStorage.getItem('round')) || 1;
 
     // Show extra arrows for 6 arrows
     arrowSelect.addEventListener('change', () => {
@@ -276,6 +276,37 @@
         extraArrowsDiv.classList.add('hidden');
       }
     });
+
+    // Load saved values from localStorage
+    function loadSavedData() {
+      const savedTournament = localStorage.getItem('tournament');
+      const savedName = localStorage.getItem('name');
+      const savedDistance = localStorage.getItem('distance');
+      const savedTarget = localStorage.getItem('target');
+      
+      if (savedTournament) {
+        document.getElementById('tournament').value = savedTournament;
+      }
+      if (savedName) {
+        document.getElementById('name').value = savedName;
+      }
+      if (savedDistance) {
+        document.getElementById('distance').value = savedDistance;
+      }
+      if (savedTarget) {
+        document.getElementById('target').value = savedTarget;
+      }
+      document.getElementById('round').value = currentRound;
+    }
+
+    // Save data to localStorage
+    function saveData() {
+      localStorage.setItem('tournament', document.getElementById('tournament').value);
+      localStorage.setItem('name', document.getElementById('name').value);
+      localStorage.setItem('distance', document.getElementById('distance').value);
+      localStorage.setItem('target', document.getElementById('target').value);
+      localStorage.setItem('round', currentRound);
+    }
 
     // Calculate points for the round
     function calculatePoints() {
@@ -322,6 +353,10 @@
       `;
       participantsResults.appendChild(participantResultDiv);
 
+      // Increment the round and save the updated round
+      currentRound++;
+      saveData();
+
       // Show the PDF export button
       exportPdfButton.classList.remove('hidden');
     });
@@ -340,33 +375,14 @@
       document.getElementById('arrow4').value = '0';
       document.getElementById('arrow5').value = '0';
       document.getElementById('arrow6').value = '0';
-      document.getElementById('round-points').value = '0';
-      document.getElementById('total-points').value = '0';
+      totalPoints = 0;
+      totalX = 0;
+      totalXDiv.textContent = '';
       participantsResults.innerHTML = '';
-      totalXDiv.textContent = 'Gesamt X: 0';
     });
 
-    // Send WhatsApp Message
-    function sendWhatsApp(total, name) {
-      const message = `Punkte für ${name} im Turnier: ${total} Punkte`;
-      const url = `https://wa.me/?text=${encodeURIComponent(message)}`;
-      window.open(url, '_blank');
-    }
-
-    // Export PDF
-    exportPdfButton.addEventListener('click', () => {
-      const doc = new jsPDF();
-
-      doc.text('Punkte Ergebnis', 10, 10);
-      let yOffset = 20;
-
-      document.querySelectorAll('.participant-result').forEach(result => {
-        doc.text(result.innerText, 10, yOffset);
-        yOffset += 30;
-      });
-
-      doc.save('ergebnisse.pdf');
-    });
+    // Load saved data when the page is loaded
+    loadSavedData();
   </script>
 </body>
 </html>
